First Tweet Interaction with Python Backend

--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Labeling</title>
-    <script src="../static/js/callbacks.js"></script>
+    <script src="../static/js/labeling.js"></script>
 </head>
 
 <body>
 
-    <button type="button" , onclick="Callback_Startbutton_2()" , id="StartB">Lets start!</button>
-
+    <button type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button>
+    <p>{{tweet}}</p>
 
 </body>
 
