--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -2,14 +2,90 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Labeling</title>
     <script src="../static/js/labeling.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">   
+    <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>  
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" > 
+    <link rel="stylesheet" href="../static/css/labeling.css">
 </head>
 
 <body>
-
-    <button type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button>
-    <p>{{tweet}}</p>
+    <!--Basic Grid Layout from the labeling.css stylesheet-->
+    <div class="grid-container">
+        <div class="menu-space">
+            <ul style="list-style: none;">
+                <li class="list-padding">
+                    <button type="button" , onclick="Pro_Label()" , id="pro_label_climate">Pro</button>  
+                </li>
+                <li class="list-padding">
+                    <button type="button" , onclick="Anti_Label()" , id="anti_label_climate">Anti</button>   
+                </li>
+                <li class="list-padding">
+                    <button type="button" , onclick="Neutral_Label()" , id="neutral_label_climate">Neutral</button>
+                </li>
+                <li class="list-padding">
+                    <button type="button" , onclick="News_Label()" , id="news_label_climate">News</button> 
+                </li>
+            </ul>
+        </div>
+        <div class="header-space">
+            <!--Navigation bar to chose bewteen pages-->
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">Startseite</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/labeling">Labeling</a>
+                    </li>
+        
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/training">Training</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/analysis">Analyse</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="main-space">
+            <div class="padding">
+                <table class="table table-bordered table-hover dt-responsive"style="width=50px">  
+                  <thead>  
+                    <tr>  
+                      <th>Tweet</th>
+                      <th>Label</th>
+                      <th>Mein Label</th>    
+                    </tr>  
+                  </thead>  
+                  <tbody>   
+                      <tr>
+                         <td>
+                            <!--Shows the tweet coming from the pandas data frame-->
+                            {{tweet}}
+                        </td>
+                         <td>{{sentiment}}</td>
+                         <td>{{my_label}}</td>
+                      </tr> 
+                  </tbody>  
+                  <tfoot>                      
+                  </tfoot>  
+                </table> 
+            </div>
+        </div>  
+        <div class="footer-space">
+            <button type="button" , onclick="Previous_Tweet()" , id="Previous">Vorheriger Tweet</button>  
+            <button type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button> 
+        </div>
+    </div> 
 
 </body>
 
