--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,9 @@
                 <!--Selection for the user to choose which dataframe to load-->
                 <label id="which_dataset_label" for="which_dataset">Datensatz</label>
                 <select name="which_dataset" id="which_dataset" required>
-                    <option value=1>Klimawandel Datensatz Original</option>
-                    <option value=2>Klimawandel Datensatz Bearbeiter: Dummy</option>
+                    {% for dataset in datasets %}
+                        <option value="{{ dataset }}">{{ dataset }}</option>
+                    {% endfor %}
                 </select>
                 <input type = "submit" value = "Auswählen" id="login_dataset_choice"/>
             </form>
