added wordcloud to the dataset

--- a/templates/training.html
+++ b/templates/training.html
@@ -44,6 +44,8 @@
             </nav>
         </div>
         <div class="main-space">  
+            <p>Interessante Statistiken über den Datensatz</p>
+            <button type="button" class="btn btn-primary" onclick="Switch_To_Model_Analysis()">Zeige es mir!</button>
         </div>
         <div class="footer-space">
             <p>Dummy Text</p>
