--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,21 @@
                 </select>
                 <input type = "submit" value = "Auswählen" id="login_dataset_choice"/>
             </form>
+            <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
+            <!--Arbeitsauftrag an Nikolas: Ich möchte den Platz aufgeteilt haben: links die Möglichkeit, einen bestehenden Datensatz
+            auszuwählen und rechts die Möglichkeit, sich einen neuen anzulegen. Dabei soll der User 4 Dropdown Menüs und ein Textfeld für 
+            den Suchbegriff haben-->
+            <form action = "{{ url_for('search') }}" method = "POST">
+                <label for="search_term">Suchbegriff:</label>
+                <input type="text" name="search_term"
+                id="search_term" placeholder="Eingeben"
+                autocomplete="on" required
+                autofocus>
+            </form>
+
         </div>
         <div class="footer-space">
-            <p>Dummy Text</p>
+            <p><!--Platzhalter--></p>
         </div>
     </div> 
 
