--- a/templates/training.html
+++ b/templates/training.html
@@ -17,10 +17,6 @@
 <body>
   <!--Basic Grid Layout from the labeling.css stylesheet-->
     <div class="grid-container">
-        <div class="menu-space">Auf dieser Seite soll man die Tensorflow Informationen über das Modell Training erhalten.
-            Außerdem sollen am Ende des Trainings verschiedene Plots angezeigt werden: über Unsicherheiten,
-            wv. wurde gelabelt, wie hoch war der Unsicherheitsthreshhold, Training und Validation Loss, ...
-        </div>
         <div class="header-space">
             <!--Navigation bar to chose bewteen pages-->
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -48,7 +44,9 @@
             <button type="button" class="btn btn-primary" onclick="Switch_To_Model_Analysis()">Zeige es mir!</button>
         </div>
         <div class="footer-space">
-            <p>Dummy Text</p>
+            <p>Auf dieser Seite soll man die Tensorflow Informationen über das Modell Training erhalten.
+                Außerdem sollen am Ende des Trainings verschiedene Plots angezeigt werden: über Unsicherheiten,
+                wv. wurde gelabelt, wie hoch war der Unsicherheitsthreshhold, Training und Validation Loss, ...</p>
         </div>
     </div> 
 
