--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -129,7 +129,7 @@
             </button>
         </div>
         <!--<div class="bottom-right">
-        </div>-->>
+        </div>-->
     </div> 
 
 
