--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -5,15 +5,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Labeling</title>
     <script src="../static/js/labeling.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>  
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">   
-    <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>  
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" > 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/labeling.css">
+    <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/tweet.css">
+
 </head>
 
 <body>
@@ -23,30 +25,19 @@
         </div>-->
         <div class="header-space">
             <!--Navigation bar to chose bewteen pages-->
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/">Startseite</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/labeling">Labeling</a>
-                    </li>
-        
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/training">Training</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/analysis">Analyse</a>
-                    </li>
-                </ul>
-            </nav>
+            <ul navbar>
+                <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
+                <li><a class="nav-link" href="/labeling" data-title="About">Labeling</a></li>
+                <li><a class="nav-link" href="/training" data-title="Blog">Training</a></li>
+                <li><a href="#" data-title="Portfolio">Analyse</a></li>
+            </ul>
         </div>
+
         <div class="main-space">
             <div class="tweet default">
                 <div class="user-info">
-                    <div class="avatar-container"><img class="avatar" src="../static/tweet_avatars/Fujiyama.jpg" alt="Twitter avatar"></div>
+                    <div class="avatar-container"><img class="avatar" src="../static/tweet_avatars/Fujiyama.jpg"
+                            alt="Twitter avatar"></div>
                     <div class="user-info-right">
                         <div class="drop-button"><svg viewBox="0 0 24 24">
                                 <g>
@@ -57,7 +48,8 @@
                             </svg></div>
                         <div class="user-name">
                             <div class="user-name-txt"><span class="fake-link">Twitter</span></div>
-                            <div class="icon"><svg viewBox="0 0 24 24" aria-label="Verified account" class="verified-icon-svg">
+                            <div class="icon"><svg viewBox="0 0 24 24" aria-label="Verified account"
+                                    class="verified-icon-svg">
                                     <g>
                                         <path
                                             d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
@@ -71,7 +63,8 @@
                 <div class="tweet-content">
                     <div class="txt">{{tweet}}</div>
                 </div>
-                <div class="metadata">3:32 PM · Feb 14, 1997 · <span class="fake-link app">Twitter for iPhone</span></div>
+                <div class="metadata">3:32 PM · Feb 14, 1997 · <span class="fake-link app">Twitter for iPhone</span>
+                </div>
                 <div class="rt-likes"><span class="fake-link num-rts"><strong>32K</strong> Retweets</span><span
                         class="fake-link num-quotes"><strong>100</strong> Quoted Tweets</span><span
                         class="fake-link num-likes"><strong>12.7K</strong> Likes</span></div>
@@ -79,7 +72,8 @@
                     <div class="bottom-button blue">
                         <div onclick="Pro_Label()"><svg viewBox="0 0 24 24">
                                 <g>
-                                    <path class='{{"bottom-button blue already-labeled" if labeled_pro else "normal"}}', id="pro-symbol",
+                                    <path class='{{"bottom-button blue already-labeled" if labeled_pro else "normal"}}'
+                                        , id="pro-symbol" ,
                                         d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z">
                                     </path>
                                 </g>
@@ -87,9 +81,11 @@
                     </div>
                     <div class="bottom-button green">
                         <div onclick="Anti_Label()"><svg ,viewBox="0 0 24 24">
-                            <!--If we have already labeled the tweet, then it gets the class already-labeled and the symbol is colored accordingly-->
+                                <!--If we have already labeled the tweet, then it gets the class already-labeled and the symbol is colored accordingly-->
                                 <g>
-                                    <path class='{{"bottom-button green already-labeled" if labeled_anti else "normal"}}', id="anti-symbol",
+                                    <path
+                                        class='{{"bottom-button green already-labeled" if labeled_anti else "normal"}}'
+                                        , id="anti-symbol" ,
                                         d="M23.77 15.67c-.292-.293-.767-.293-1.06 0l-2.22 2.22V7.65c0-2.068-1.683-3.75-3.75-3.75h-5.85c-.414 0-.75.336-.75.75s.336.75.75.75h5.85c1.24 0 2.25 1.01 2.25 2.25v10.24l-2.22-2.22c-.293-.293-.768-.293-1.06 0s-.294.768 0 1.06l3.5 3.5c.145.147.337.22.53.22s.383-.072.53-.22l3.5-3.5c.294-.292.294-.767 0-1.06zm-10.66 3.28H7.26c-1.24 0-2.25-1.01-2.25-2.25V6.46l2.22 2.22c.148.147.34.22.532.22s.384-.073.53-.22c.293-.293.293-.768 0-1.06l-3.5-3.5c-.293-.294-.768-.294-1.06 0l-3.5 3.5c-.294.292-.294.767 0 1.06s.767.293 1.06 0l2.22-2.22V16.7c0 2.068 1.683 3.75 3.75 3.75h5.85c.414 0 .75-.336.75-.75s-.337-.75-.75-.75z">
                                     </path>
                                 </g>
@@ -98,7 +94,9 @@
                     <div class="bottom-button red">
                         <div onclick="Neutral_Label()"><svg viewBox="0 0 24 24">
                                 <g>
-                                    <path class='{{"bottom-button red already-labeled" if labeled_neutral else "normal"}}', id="neutral-symbol",
+                                    <path
+                                        class='{{"bottom-button red already-labeled" if labeled_neutral else "normal"}}'
+                                        , id="neutral-symbol" ,
                                         d="M12 21.638h-.014C9.403 21.59 1.95 14.856 1.95 8.478c0-3.064 2.525-5.754 5.403-5.754 2.29 0 3.83 1.58 4.646 2.73.814-1.148 2.354-2.73 4.645-2.73 2.88 0 5.404 2.69 5.404 5.755 0 6.376-7.454 13.11-10.037 13.157H12zM7.354 4.225c-2.08 0-3.903 1.988-3.903 4.255 0 5.74 7.034 11.596 8.55 11.658 1.518-.062 8.55-5.917 8.55-11.658 0-2.267-1.823-4.255-3.903-4.255-2.528 0-3.94 2.936-3.952 2.965-.23.562-1.156.562-1.387 0-.014-.03-1.425-2.965-3.954-2.965z">
                                     </path>
                                 </g>
@@ -107,10 +105,12 @@
                     <div class="bottom-button blue">
                         <div onclick="News_Label()"><svg viewBox="0 0 24 24">
                                 <g>
-                                    <path class='{{"bottom-button blue already-labeled" if labeled_news else "normal"}}', id="news-symbol",
+                                    <path class='{{"bottom-button blue already-labeled" if labeled_news else "normal"}}'
+                                        , id="news-symbol" ,
                                         d="M17.53 7.47l-5-5c-.293-.293-.768-.293-1.06 0l-5 5c-.294.293-.294.768 0 1.06s.767.294 1.06 0l3.72-3.72V15c0 .414.336.75.75.75s.75-.336.75-.75V4.81l3.72 3.72c.146.147.338.22.53.22s.384-.072.53-.22c.293-.293.293-.767 0-1.06z">
                                     </path>
-                                    <path class='{{"bottom-button blue already-labeled" if labeled_news else "normal"}}', id="news-symbol-2",
+                                    <path class='{{"bottom-button blue already-labeled" if labeled_news else "normal"}}'
+                                        , id="news-symbol-2" ,
                                         d="M19.708 21.944H4.292C3.028 21.944 2 20.916 2 19.652V14c0-.414.336-.75.75-.75s.75.336.75.75v5.652c0 .437.355.792.792.792h15.416c.437 0 .792-.355.792-.792V14c0-.414.336-.75.75-.75s.75.336.75.75v5.652c0 1.264-1.028 2.292-2.292 2.292z">
                                     </path>
                                 </g>
@@ -118,43 +118,47 @@
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
         <div class="footer-space">
-            <button type="button" , onclick="Previous_Tweet()" , id="Previous">Vorheriger Tweet</button>  
-            <button type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button> 
+            <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">Vorheriger
+                Tweet</button>
+            <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button>
             <!-- Button trigger modal 
             Choose a cool button style class for the future-->
-            <button type="button" onclick="Save_Results()" data-toggle="modal" data-target="#SaveDataModal">
+            <button class="labelbutton" type="button" onclick="Save_Results()" data-toggle="modal"
+                data-target="#SaveDataModal">
                 Speichern
             </button>
         </div>
         <!--<div class="bottom-right">
         </div>-->
-    </div> 
-
-
-  <!--Button Triggered Code Section-->  
-  <!-- Modal -->
-  <div class="modal fade" id="SaveDataModal" tabindex="-1" role="dialog" aria-labelledby="SaveDataModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="SaveDataModalLabel">Gespeichert</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            Der Datensatz wurde erfolgreich gespeichert.
-            Wie soll es jetzt weitergehen?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Weiter Labeln</button>
-          <button type="button" class="btn btn-primary" onclick="Switch_To_Model_Training()">Model Trainieren</button>
-        </div>
-      </div>
     </div>
-  </div>
+
+
+    <!--Button Triggered Code Section-->
+    <!-- Modal -->
+    <div class="modal fade" id="SaveDataModal" tabindex="-1" role="dialog" aria-labelledby="SaveDataModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="SaveDataModalLabel">Gespeichert</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Der Datensatz wurde erfolgreich gespeichert.
+                    Wie soll es jetzt weitergehen?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Weiter Labeln</button>
+                    <button type="button" class="btn btn-primary" onclick="Switch_To_Model_Training()">Model
+                        Trainieren</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
