--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
                 <li><a class="nav-link" href="/labeling" data-title="About">Labeling</a></li>
                 <li><a class="nav-link" href="/training" data-title="Blog">Training</a></li>
-                <li><a href="#" data-title="Portfolio">Analyse</a></li>
+                <li><a href="/analysis" data-title="Portfolio">Analyse</a></li>
             </ul>
         </div>
         <div class="main-space">
