--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -29,7 +29,7 @@
                 <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
                 <li><a class="nav-link" href="/labeling" data-title="About">Labeling</a></li>
                 <li><a class="nav-link" href="/training" data-title="Blog">Training</a></li>
-                <li><a href="#" data-title="Portfolio">Analyse</a></li>
+                <li><a href="/analysis" data-title="Portfolio">Analyse</a></li>
             </ul>
         </div>
 
