added an initial loading screen for the training process

--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -28,7 +28,7 @@
             <ul navbar>
                 <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
                 <li><a class="nav-link" href="/labeling" data-title="About">Labeling</a></li>
-                <li><a class="nav-link" href="/training" data-title="Blog">Training</a></li>
+                <li><a class="nav-link" href="/loading_screen" data-title="Blog">Training</a></li>
                 <li><a href="/analysis" data-title="Portfolio">Analyse</a></li>
             </ul>
         </div>
