--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -37,7 +37,7 @@
                     </li>
         
                     <li class="nav-item active">
-                        <a class="nav-link" href="/training">Training</a>
+                        <a class="nav-link" href="/loading_screen">Training</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
