--- a/templates/index.html
+++ b/templates/index.html
@@ -56,14 +56,14 @@
                     <label for="start_time">Startzeitpunkt:</label>
                     <input type="date" name="start_time" id="start_time" autocomplete="on" required autofocus>
                     <label for="end_time">Endzeitpunkt:</label>
-                    <input type="date" name="end_time" id="end_time" autocomplete="on" required autofocus>
+                    <input type="date" onchange="handler(event);" name="end_time" id="end_time" autocomplete="on" required autofocus>
                     <label for="language">Sprache:</label>
                     <select name="language" id="language" required>
                         <option value='de'>Deutsch</option>
                         <option value='en'>Englisch</option>
                     </select>
                     <label for="max_results">Anzahl an Tweets:</label>
-                    <input type="number" name="max_results" id="max_results" required value="0" step="any" />
+                    <input type="number" name="max_results" id="max_results" required value="100" step="any" />
                     <input class="homebutton" type="submit" value="Speichern" /><br>
                 </form>
             </div>
@@ -74,10 +74,48 @@
         </div>
     </div>
     <script>
+        // the api lets us only choose dates up to one week prior
         // fill in the current date and time
         let today = new Date().toISOString().substr(0, 10);
-        document.getElementById("start_time").value = today;
+        var yesterday = new Date();
+        yesterday.setDate(yesterday.getDate() - 1);
+        yesterday = yesterday.toISOString().substr(0, 10);
+        
+        // five days before
+        var five_days_prior = new Date();
+        five_days_prior.setDate(five_days_prior.getDate() - 5);
+        five_days_prior = five_days_prior.toISOString().substr(0, 10);
+        
+        // six days before
+        var six_days_prior = new Date();
+        six_days_prior.setDate(six_days_prior.getDate() - 6);
+        six_days_prior = six_days_prior.toISOString().substr(0, 10);
+
+        // set mins and maxes
         document.getElementById("end_time").value = today;
+        document.getElementById("end_time").min = five_days_prior;
+        document.getElementById("end_time").max = today;
+
+        document.getElementById("start_time").value = yesterday;
+        document.getElementById("start_time").min = six_days_prior;
+        document.getElementById("start_time").max = yesterday;
+
+        // minimum start date depends on current end date and max can only be the current end date - 1
+        function handler(e){
+        // start_date min
+        var currrent_end_time = document.getElementById("end_time").value
+        currrent_end_time_number = Date.parse(currrent_end_time)
+        // var min_value_start_time = new Date(currrent_end_time_number)
+        // min_value_start_time.setDate(min_value_start_time.getDate() - 6);
+        // min_value_start_time = min_value_start_time.toISOString().substr(0, 10);
+        // document.getElementById("start_time").min = min_value_start_time;
+        // start_date_max
+        var max_value_start_time = new Date(currrent_end_time_number)
+        max_value_start_time.setDate(max_value_start_time.getDate() - 1);
+        max_value_start_time = max_value_start_time.toISOString().substr(0, 10);
+        document.getElementById("start_time").max = max_value_start_time;
+        }
+
     </script>
 
 </body>
