--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,7 +1,7 @@
 <html>
 <header><title>Loading</title></header>
 <head>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='loading.css') }}"/>
+    <link rel="stylesheet" href="../static/css/loading.css">
 </head>
 <script>
     function resizenow() {
@@ -71,7 +71,7 @@
         </div>
         </div>
         <div style="color:white; margin-left:auto; margin-right:auto; font-size: 1.3em;">
-        Please wait... Loading...
+        Bitte kurz warten, das Modell wird trainiert...
         </div>
     </div>
   </div>
