made the website even better :D

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                         <option value='en'>Englisch</option>
                     </select>
                     <label for="max_results">Anzahl an Tweets:</label>
-                    <input type="number" name="max_results" id="max_results" required value="100" step="any" />
+                    <input type="number" min=10 max=500 name="max_results" id="max_results" required value="100" step="any" />
                     <input class="homebutton" type="submit" value="Speichern" /><br>
                 </form>
             </div>
