--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -121,8 +121,7 @@
                 <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">Vorheriger
                     Tweet</button>
                 <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">Nächster Tweet</button>
-                <!-- Button trigger modal 
-                Choose a cool button style class for the future-->
+                <!-- Button trigger modal-->
                 <button class="labelbutton" type="button" onclick="Save_Results()" data-toggle="modal"
                     data-target="#SaveDataModal">
                     Speichern
