--- a/static/css/tweet.css
+++ b/static/css/tweet.css
@@ -12,6 +12,7 @@
     max-width: 600px;
     width: 60%;
     border: 1px solid #e6ecf0;
+    border-radius: 10px 20px;
     color: rgb(20, 23, 26);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     background: #ffffff;
@@ -132,9 +133,17 @@
 }
 
 .bottom-buttons {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    justify-content: center;
 }
+.bottom-buttons > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .bottom-button {
     height: 48px;
