--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Startseite</title>
+    <title>Home</title>
     <script src="../static/js/labeling.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
@@ -11,74 +11,136 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/labeling.css">
-    <link rel="stylesheet" href="../static/css/navbar.css">
-    <link rel="stylesheet" href="../static/css/dropdown.css">
+    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/general.css">
 </head>
 
-<body>
+<body id="index">
     <!--Basic Grid Layout from the labeling.css stylesheet-->
     <div class="grid-container">
         <div class="header-space">
             <!--Navigation bar to chose bewteen pages-->
             <ul navbar>
                 <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
-                <li><a class="nav-link" href="/labeling" data-title="About">Labeling</a></li>
-                <li><a class="nav-link" href="/training" data-title="Blog">Training</a></li>
-                <li><a href="#" data-title="Portfolio">Analyse</a></li>
+                <li class="arrow"></li>
+                <li><a role="link" aria-disabled="true" data-title="labeling">Labeling</a></li>
+                <li class="arrow"></li>
+                <li><a role="link" aria-disabled="true" data-title="analyse">Analyse</a></li>
             </ul>
         </div>
         <div class="main-space">
-            <div class="main-left" pill>
-                <p>Aus bestehenden Datensätzen wählen</p>
-                <hr index>
-                <form action="{{ url_for('choose_dataset') }}" method="POST">
-                    <!--Selection for the user to choose which dataframe to load-->
-                    <label id="which_dataset_label" for="which_dataset">Datensatz</label>
-                    <select name="which_dataset" id="which_dataset" required>
-                        {% for dataset in datasets %}
-                        <option value="{{ dataset }}">{{ dataset }}</option>
-                        {% endfor %}
-                    </select>
-                    <input class="homebutton" type="submit" value="Auswählen" id="login_dataset_choice" />
-                </form>
+            <div class="main-space-top">
+                <h3>Tweet Sentiment Analyse mithilfe von Active Learning</h3>
+                <hr index1>
+                <p>Dieses Tool bitet dem Nutzer die Möglichkeit große Mengen von Twitter Tweets hinsichtlich ihrer
+                    Gesinnung zu analysieren. Dadurch können sprachliche Informationen schnell und einfach zugänglich
+                    gemacht werden.
+                </p>
+                <p>Zunächst ist es erforderlich einen Datensatz mithilfe der Filter zu erstellen und diesen im
+                    Anschluss aus dem Dropdown-Menü auszuwählen. Die erstellten Dateien können offline gespeichert oder
+                    auch wieder aus der Liste gelöscht werden. Nach einem Klick auf den Button "Auswählen" gelangt man
+                    zum nächsten Schritt, in dem man die Tweets labelt.
+                </p>
             </div>
-            <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
-            <!--Arbeitsauftrag an Nikolas: Ich möchte den Platz aufgeteilt haben: links die Möglichkeit, einen bestehenden Datensatz
-            auszuwählen und rechts die Möglichkeit, sich einen neuen anzulegen. Dabei soll der User 4 Dropdown Menüs und ein Textfeld für 
-            den Suchbegriff haben-->
-            <div class="main-right" pill>
-                <p>Neuen Datensatz erstellen</p>
-                <hr index>
-                <form action="{{ url_for('search') }}" method="POST">
-                    <label for="search_term">Suchbegriff:</label>
-                    <input type="text" name="search_term" id="search_term" placeholder="Eingeben" autocomplete="on"
-                        required autofocus>
-                    <label for="start_time">Startzeitpunkt:</label>
-                    <input type="date" name="start_time" id="start_time" autocomplete="on" required autofocus>
-                    <label for="end_time">Endzeitpunkt:</label>
-                    <input type="date" name="end_time" id="end_time" autocomplete="on" required autofocus>
-                    <label for="language">Sprache:</label>
-                    <select name="language" id="language" required>
-                        <option value='de'>Deutsch</option>
-                        <option value='en'>Englisch</option>
-                    </select>
-                    <label for="max_results">Anzahl an Tweets:</label>
-                    <input type="number" name="max_results" id="max_results" required value="0" step="any" />
-                    <input class="homebutton" type="submit" value="Speichern" /><br>
-                </form>
+            <div class="main-space-bottom">
+                <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
+                <div class="main-space-bottom-left" pill>
+                    <div>
+                        <p>Neuen Datensatz erstellen</p>
+                        <hr index2>
+                    </div>
+                    <form action="{{ url_for('search') }}" method="POST">
+                        <div class="main-space-bottom-left-input-fields">
+                            <label for="search_term">Suchbegriff:</label>
+                            <input type="text" name="search_term" id="search_term" placeholder="Eingeben"
+                                autocomplete="on" required autofocus>
+                            <label for="start_time">Startzeitpunkt:</label>
+                            <input type="date" name="start_time" id="start_time" autocomplete="on" required autofocus>
+                            <label for="end_time">Endzeitpunkt:</label>
+                            <input type="date" onchange="handler(event);" name="end_time" id="end_time"
+                                autocomplete="on" required autofocus>
+                            <label for="language">Sprache:</label>
+                            <select name="language" id="language" required>
+                                <option value='de'>Deutsch</option>
+                                <option value='en'>Englisch</option>
+                            </select>
+                            <label for="max_results">Anzahl an Tweets:</label>
+                            <input type="number" min=10 max=500 name="max_results" id="max_results" required value="100"
+                                step="any" />
+                        </div>
+                        <input class="homebutton" type="submit" value="Erstellen" />
+                    </form>
+                </div>
+
+                <div class="main-space-bottom-right" pill>
+                    <div>
+                        <p>Aus bestehenden Datensätzen wählen</p>
+                        <hr index2>
+                    </div>
+                    <!--Selection for the user to choose which dataframe to load-->
+                    <form action="{{ url_for('choose_dataset') }}" method="POST">
+                        <div class="main-space-bottom-right-input-field">
+                            <label id="which_dataset_label" for="which_dataset">Datensatz</label>
+                            <select name="which_dataset" id="which_dataset" required>
+                                {% for dataset in datasets %}
+                                <option value="{{ dataset }}">{{ dataset }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <input class="homebutton" type="submit" value="Auswählen" id="login_dataset_choice" />
+                        <div class="main-space-bottom-right-buttons">
+                            <input class="homebutton" type="" value="Löschen" id="" />
+                            <input class="homebutton" type="" value="Herunterladen" id="" />
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
-        <div class="footer-space">
-            <p><!--Platzhalter--></p>
-        </div>
     </div>
     <script>
+        // the api lets us only choose dates up to one week prior
         // fill in the current date and time
         let today = new Date().toISOString().substr(0, 10);
-        document.getElementById("start_time").value = today;
+        var yesterday = new Date();
+        yesterday.setDate(yesterday.getDate() - 1);
+        yesterday = yesterday.toISOString().substr(0, 10);
+
+        // five days before
+        var five_days_prior = new Date();
+        five_days_prior.setDate(five_days_prior.getDate() - 5);
+        five_days_prior = five_days_prior.toISOString().substr(0, 10);
+
+        // six days before
+        var six_days_prior = new Date();
+        six_days_prior.setDate(six_days_prior.getDate() - 6);
+        six_days_prior = six_days_prior.toISOString().substr(0, 10);
+
+        // set mins and maxes
         document.getElementById("end_time").value = today;
+        document.getElementById("end_time").min = five_days_prior;
+        document.getElementById("end_time").max = today;
+
+        document.getElementById("start_time").value = yesterday;
+        document.getElementById("start_time").min = six_days_prior;
+        document.getElementById("start_time").max = yesterday;
+
+        // minimum start date depends on current end date and max can only be the current end date - 1
+        function handler(e) {
+            // start_date min
+            var currrent_end_time = document.getElementById("end_time").value
+            currrent_end_time_number = Date.parse(currrent_end_time)
+            // var min_value_start_time = new Date(currrent_end_time_number)
+            // min_value_start_time.setDate(min_value_start_time.getDate() - 6);
+            // min_value_start_time = min_value_start_time.toISOString().substr(0, 10);
+            // document.getElementById("start_time").min = min_value_start_time;
+            // start_date_max
+            var max_value_start_time = new Date(currrent_end_time_number)
+            max_value_start_time.setDate(max_value_start_time.getDate() - 1);
+            max_value_start_time = max_value_start_time.toISOString().substr(0, 10);
+            document.getElementById("start_time").max = max_value_start_time;
+        }
+
     </script>
 
 </body>
