--- a/templates/index.html
+++ b/templates/index.html
@@ -32,18 +32,17 @@
             <div class="main-space-top">
                 <h3>Tweet Sentiment Analyse mithilfe von Active Learning</h3>
                 <hr index1>
-                <p>Dieses Tool bitet dem Nutzer die Möglichkeit große Mengen von Twitter Tweets hinsichtlich ihrer
-                    Gesinnung zu analysieren. Dadurch können sprachliche Informationen schnell und einfach zugänglich
-                    gemacht werden.
-                </p>
-                <p>Zunächst ist es erforderlich einen Datensatz mithilfe der Filter zu erstellen und diesen im
-                    Anschluss aus dem Dropdown-Menü auszuwählen. Die erstellten Dateien können offline gespeichert oder
-                    auch wieder aus der Liste gelöscht werden. Nach einem Klick auf den Button "Auswählen" gelangt man
-                    zum nächsten Schritt, in dem man die Tweets labelt.
-                </p>
             </div>
             <div class="main-space-bottom">
-                <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
+                <div class="text-left">
+                    <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
+                    <p>Um das Sentiment von Tweets zu analysieren, geben Sie in das Feld "Suchbegriff" Schlüsselwörter
+                        oder Phrasen ein, die in Bezug auf das stehen, worüber Sie die Analyse durchführen möchten.
+                        Zusätzlich müssen Sie einen Zeitraum angeben, auf den sich die Tweets beziehen sollen, eine
+                        Sprache auswählen und die Anzahl der Tweets festlegen. Klicken Sie auf die Schaltfläche
+                        "Erstellen", um die Ergebnisse im Dropdown Menü, der bestehenden Datensätze anzuzeigen.
+                    </p>
+                </div>
                 <div class="main-space-bottom-left" pill>
                     <div>
                         <p>Neuen Datensatz erstellen</p>
@@ -72,6 +71,12 @@
                     </form>
                 </div>
 
+                <div class="text-right">
+                    <p>Wählen sie um fortzufahren dann einen neu erstellten Datzensatz oder einen bereits bestehenden
+                        Datensatz aus dem Dropdown Menü aus um diesen zu löschen oder herunterzuladen. Wenn Sie die
+                        Tweets annotieren möchten, wählen Sie diesen aus und Sie werden zum Annotationstool
+                        weitergeleitet.</p>
+                </div>
                 <div class="main-space-bottom-right" pill>
                     <div>
                         <p>Aus bestehenden Datensätzen wählen</p>
@@ -93,6 +98,7 @@
                             <input class="homebutton" type="" value="Herunterladen" id="" />
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
