--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -46,7 +46,7 @@
 
                 <!--@ELIAS Button bitte noch entfernen. Habe ich nur gelassen, um dir die Funktionsweise zu zeigen.-->
                 <div class="w3-light-grey w3-round">
-                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:25%">25%</div>
+                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:25%">{{progress}}%</div>
                 </div>
 
                 <button class="w3-button w3-light-grey" onclick="move()">Click Me</button>
@@ -54,13 +54,12 @@
                 <script>
                     function move() {
                         var elem = document.getElementById("myBar");
-                        var width = 1;
+                        var width = document.getElementById("myBar").textContent;
                         var id = setInterval(frame, 10);
                         function frame() {
                             if (width >= 100) {
                                 clearInterval(id);
                             } else {
-                                width++;
                                 elem.style.width = width + '%';
                             }
                         }
