--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -176,7 +176,7 @@
                         data-target="#SaveDataModal">
                         Active Learning</button>
                     <!--@ELIAS  Hier muss noch die Funktionalität eingebaut werden, dass der Tweet aus dem Datensatz gelöscht wird-->
-                    <button class="labelbutton" type="button" , onclick="" , id="Delete">
+                    <button class="labelbutton" type="button" , onclick="delete_row()" , id="Delete">
                         Löschen</button>
                 </div>
             </div>
