opportunity to delete a dataset

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <input class="homebutton" type="submit" value="Auswählen" id="login_dataset_choice" />
                         <div class="main-space-bottom-right-buttons">
-                            <input class="homebutton" type="" value="Löschen" id="" />
+                            <input class="homebutton" type="" value="Löschen" onclick="delete_csv()" id="" />
                             <input class="homebutton" type="" onclick="download_csv()" value="Herunterladen" id="" />
                         </div>
                     </form>
