--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -104,7 +104,7 @@
                     <div class="bottom-buttons">
                         <div>
                             <div class="bottom-button blue">
-                                <div onclick="Anti_Label()"><svg viewBox="0 0 24 24">
+                                <div onclick="Pro_Label()"><svg viewBox="0 0 24 24">
                                         <g>
                                             <path
                                                 class='{{"bottom-button blue already-labeled" if labeled_pro else "normal"}}'
@@ -118,7 +118,7 @@
                         </div>
                         <div>
                             <div class="bottom-button green">
-                                <div onclick="Neutral_Label()"><svg ,viewBox="0 0 24 24">
+                                <div onclick="Anti_Label()"><svg ,viewBox="0 0 24 24">
                                         <!--If we have already labeled the tweet, then it gets the class already-labeled and the symbol is colored accordingly-->
                                         <g>
                                             <path
@@ -133,7 +133,7 @@
                         </div>
                         <div>
                             <div class="bottom-button red">
-                                <div onclick="Pro_Label()"><svg viewBox="0 0 24 24">
+                                <div onclick="Neutral_Label()"><svg viewBox="0 0 24 24">
                                         <g>
                                             <path
                                                 class='{{"bottom-button red already-labeled" if labeled_neutral else "normal"}}'
